# minilibx-rs

./: Cargo.toml  LICENSE  Makefile  README.md
src/: image.rs  lib.rs  minilibx_result.rs  mlx.rs  window.rs
