[package]
name = "minilibx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xlib = []

[dependencies]
x11 = { git = "https://github.com/AltF02/x11-rs.git", features = ["xlib", "dpms"]}
gethostname = "0.2.3"